--- a/output/partials/UIs/LevelSelector.html
+++ b/output/partials/UIs/LevelSelector.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="LevelSelectorController">
+<div ng-controller="LevelSelectorController">
     <div floating-window left="'15%'" top="'25%'" width="'390px'" height="'300px'" window-title="'Level Selector'" onclose="callback.windowClosed()" visible="visible">
         <h4>{{model.loadingStatus}}</h4>
 
