--- a/output/partials/fancyHorizontalListIndex.html
+++ b/output/partials/fancyHorizontalListIndex.html
@@ -1,4 +1,4 @@
-﻿<div class="fancy-horizontal-list">
+<div class="fancy-horizontal-list">
     <div ng-repeat="item in items" ng-click="itemClick($index)" ng-transclude ng-class="currentClass($index)">
     </div>
 </div>
