--- a/output/partials/floatingWindow.html
+++ b/output/partials/floatingWindow.html
@@ -1,4 +1,4 @@
-﻿<div draggable class="window" style="z-index: 10000; position: absolute; display: none;" ng-style="positionStyles" ng-show="visible">
+<div draggable class="window" style="z-index: 10000; position: absolute; display: none;" ng-style="positionStyles" ng-show="visible">
     <h1>{{windowTitle}}</h1>
     <div class="control-buttons btn-group">
         <button ng-click="minimize()" class="button btn  btn-xs icon-double-angle-left"></button>
